[tool.poetry]
name = "bootcamp-de"
version = "0.1.0"
description = ""
authors = ["lealre <renaanvp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pandas = "^2.2.1"
pandera = "^0.18.0"
fastparquet = "^2024.2.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
